--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!-- Nav Starts -->
             <div class="navbar-collapse  collapse">
               <ul class="nav navbar-nav navbar-right scroll">
-                 <li class="active"><a href="#works">Home</a></li>
+                 <li class="active"><a href="#works">Главная</a></li>
                  <li ><a href="#about">About</a></li>
                  <li ><a href="#partners">Partners</a></li>
                  <li ><a href="#contact">Contact</a></li>
